[package]
name = "stox"
description = "A command line tool to get stock prices"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/mazylol/stox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
directories = "5.0.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }

[profile.dev]
debug = false

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"